# startup_simulator_env

./: .codex  .dockerignore  .gitignore  Dockerfile  LICENSE  Project_Overview.md  README.md  README_SPACE.md  TEMP_CODEBASE_GUIDE.md  TEMP_IMPLEMENTATION_CHECKLIST.md  TRAINING_STEPS.md  agents.py  app.py  compare_policies.py  environment.py  evaluation.py  llm_agents.py  openenv.yaml  openenv_wrapper.py  pyproject.toml  requirements-training.txt  requirements.txt  simulate.py  space_demo.py  train.py  train_ceo_sft.py
docs/: comparison_report.md  comparison_summary.json
mass_startup_env/: __init__.py  models.py
mass_startup_env/server/: app.py  startup_environment.py
notebooks/: MASS_CEO_Training_Colab.ipynb
scripts/: make_submission_artifacts.py  validate_openenv_package.py
